<resources>
    <string name="app_name">Mission Possible App</string>
    <string name="welcome_message">Welcome to Mission Possible!</string>
    <string name="task_list_message">Check your missions</string>
    <string name="add_task_message">Add new mission</string>
    <string name="save_task_message">Save mission</string>
    <string name="delete_task_message">Delete mission</string>
    <string name="task_name">Mission Name</string>
    <string name="task_description">Mission Description</string>
    <string name="task_due_date">Mission Due Date</string>
    <string name="task_time_limit">Mission Time Limit</string>
    <string name="task_added_feedback_message">Mission successfully added: </string>
    <string name="task_db_connect_fail_message">Cannot connect to remote database. Connected to local database</string>
    <string name="remote_db_create_fail_message">Cannot create mission on remote database. Only created mission on local database</string>
    <string name="db_read_fail_message">Cannot read all missions from initialized database</string>
    <string name="remote_db_update_fail_message">Cannot update mission on remote database. Only updated mission on local database</string>
    <string name="local_db_update_fail_message">Cannot update mission on local database</string>
    <string name="remote_db_delete_fail_message">Cannot delete mission(s) from remote database. Only deleted mission(s) from local database</string>
    <string name="local_db_delete_fail_message">Cannot delete mission(s) from local database</string>
    <string name="checkbox_done">Done</string>
    <string name="checkbox_favorite">Favorite</string>
    <string name="select_due_date_btn">Select Mission Due Date</string>
    <string name="select_time_limit_btn">Select Mission Time Limit</string>
    <string name="priority_info_message">Mission Priority Level</string>
    <string name="sort_done_menu_text">SORT BY DONE</string>
    <string name="sort_priority_menu_text">SORT BY PRIORITY</string>
    <string name="sort_date_menu_text">SORT BY DATE</string>
    <string name="delete_all_local_menu_text">DELETE ALL LOCAL</string>
    <string name="delete_all_remote_menu_text">DELETE ALL REMOTE</string>
    <string name="sync_database_menu_text">SYNC DATABASE</string>
    <string name="title_detail_view_available_contact">Available Contacts</string>
    <string name="title_detail_view_selected_contact">Selected Contacts</string>
    <string name="placeholder_detail_view_add_contact_input">Enter new contact</string>
    <string name="delete_contact_button_text">Delete contact</string>
    <string name="mail_contact_button_text">Mail contact</string>
    <string name="sms_contact_button_text">Sms contact</string>
    <string name="title_location">Mission Location</string>
    <string name="select_location_button_text">Select Mission Location</string>
    <string name="login_authentication_failed">Authentication failed</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="mail">Mail</string>
    <string name="show_map_view">Show map view</string>
</resources>
