<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="taskDetailViewModel"
            type="org.dieschnittstelle.mobile.android.skeleton.viewmodel.TaskDetailViewModel" />
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/taskDetailViewActivity">

            <com.google.android.material.textfield.TextInputLayout
                app:layout_constraintTop_toTopOf="parent"
                app:hintEnabled="true"
                android:hint="@string/task_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/taskName"
                android:inputType="text"
                android:error="@{taskDetailViewModel.nameInputError}">
                <com.google.android.material.textfield.TextInputEditText
                    android:text="@={taskDetailViewModel.task.name}"
                    android:onEditorAction="@{(view, keyId, event) -> taskDetailViewModel.checkNameInputOnEnterKey(keyId)}"
                    android:onTextChanged="@{() -> taskDetailViewModel.onNameInputChanged()}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                app:layout_constraintTop_toBottomOf="@+id/taskName"
                app:hintEnabled="true"
                android:hint="@string/task_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/taskDescription"
                android:inputType="text">
                <com.google.android.material.textfield.TextInputEditText
                    android:text="@={taskDetailViewModel.task.description}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:lines="5"
                    android:minLines="1">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/taskDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/task_due_date"
                android:textSize="18sp"
                android:gravity="center"
                app:layout_constraintHeight="50dp"
                app:layout_constraintTop_toBottomOf="@+id/taskDescription"
                app:layout_constraintEnd_toStartOf="@id/btnPickDueDate"/>

            <Button
                android:id="@+id/btnPickDueDate"
                android:layout_width="215dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="42dp"
                android:hint="@string/select_due_date_btn"
                android:text="@{taskDetailViewModel.toDueDateString()}"
                android:textAllCaps="false"
                app:layout_constraintTop_toBottomOf="@+id/taskDescription"
                app:layout_constraintStart_toEndOf="@id/taskDate"
                app:layout_constraintRight_toRightOf="parent"/>

            <TextView
                android:id="@+id/taskTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/task_time_limit"
                android:textSize="18sp"
                android:gravity="center"
                app:layout_constraintHeight="50dp"
                app:layout_constraintTop_toBottomOf="@+id/taskDate"
                app:layout_constraintEnd_toStartOf="@id/btnPickTime"/>

            <Button
                android:id="@+id/btnPickTime"
                android:layout_width="215dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:hint="@string/select_time_limit_btn"
                android:text="@{taskDetailViewModel.toTimeLimitString()}"
                android:textAllCaps="false"
                app:layout_constraintTop_toBottomOf="@+id/btnPickDueDate"
                app:layout_constraintStart_toEndOf="@id/taskTime"/>

            <TextView
                android:id="@+id/titleLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/title_location"
                android:textSize="18sp"
                android:gravity="center"
                app:layout_constraintHeight="50dp"
                app:layout_constraintTop_toBottomOf="@id/taskTime"
                app:layout_constraintEnd_toStartOf="@+id/btnPickLocation" />

            <Button
                android:id="@+id/btnPickLocation"
                android:layout_width="215dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:hint="@string/select_location_button_text"
                android:text="@{taskDetailViewModel.task.location.name}"
                android:textAllCaps="false"
                app:layout_constraintTop_toBottomOf="@id/btnPickTime"
                app:layout_constraintStart_toEndOf="@id/titleLocation"
                app:layout_constraintRight_toRightOf="parent" />

            <TextView
                android:id="@+id/priorityText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/priority_info_message"
                android:textSize="18sp"
                android:gravity="center"
                app:layout_constraintHeight="50dp"
                app:layout_constraintTop_toBottomOf="@+id/titleLocation"
                app:layout_constraintEnd_toStartOf="@id/dropdownPriority"/>

            <Spinner
                android:id="@+id/dropdownPriority"
                android:layout_width="215dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:background="@android:drawable/btn_dropdown"
                app:layout_constraintTop_toBottomOf="@+id/btnPickLocation"
                app:layout_constraintStart_toEndOf="@id/priorityText"/>

            <Spinner
                android:id="@+id/contactsDropdown"
                android:layout_width="215dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="37dp"
                android:background="@android:drawable/btn_dropdown"
                app:layout_constraintTop_toBottomOf="@+id/dropdownPriority"
                app:layout_constraintStart_toEndOf="@id/titleSelectedContacts"/>

            <TextView
                android:id="@+id/titleSelectedContacts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/title_detail_view_selected_contact"
                android:textSize="18sp"
                android:gravity="center"
                app:layout_constraintHeight="50dp"
                app:layout_constraintTop_toBottomOf="@+id/priorityText"
                app:layout_constraintEnd_toStartOf="@+id/contactsDropdown" />

            <ListView
                android:id="@+id/selectedContacts"
                android:layout_width="match_parent"
                android:layout_height="210dp"
                android:paddingTop="5dp"
                android:nestedScrollingEnabled="true"
                app:layout_constraintTop_toBottomOf="@+id/titleSelectedContacts" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/taskCompleted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:checked="@={taskDetailViewModel.task.completed}"
                android:text="@string/checkbox_done"
                android:textSize="20sp"
                app:buttonTint="@color/colorAccent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/selectedContacts" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/taskFavorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:checked="@={taskDetailViewModel.task.favorite}"
                android:text="@string/checkbox_favorite"
                android:textSize="20sp"
                app:buttonTint="@color/colorAccent"
                app:layout_constraintEnd_toStartOf="@id/taskCompleted"
                app:layout_constraintTop_toBottomOf="@id/selectedContacts" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/updateTaskAction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:onClick="@{() -> taskDetailViewModel.saveTask()}"
                android:contentDescription="@string/save_task_message"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:srcCompat="@drawable/baseline_save_white_24dp">
            </com.google.android.material.floatingactionbutton.FloatingActionButton>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/deleteTaskAction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:contentDescription="@string/delete_task_message"
                android:onClick="@{() -> taskDetailViewModel.deleteTask()}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:srcCompat="@drawable/baseline_delete_white_24dp">
            </com.google.android.material.floatingactionbutton.FloatingActionButton>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>